# deprecate_cmsplugin_filer

./: README.md  pyproject.toml  setup.py
deprecate_cmsplugin_filer/: __init__.py  apps.py
deprecate_cmsplugin_filer/migrations/: migration_filer_deprecation_move.py
migrations/: migration_filer_deprecation_move.py
