[tool.poetry]
name = "deprecate_cmsplugin_filer"
version = "0.1.0"
description = "A small app with a migration for converting deprecated cmsplugin-filer objects to djangocms plugin objects."
homepage = "https://github.com/ImaginaryLandscape/deprecate_cmsplugin_filer"
readme = "README.md"
authors = ["Imagescape <info@imagescape.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
